# static-inline

./: CMakeLists.txt  main_broken.cpp  main_ok.cpp
.github/workflows/: c-cpp.yml  main.yml
